Close telnet connection in case of error (fixes #995)