modules/control/telnet.c
@@ -390,7 +390,7 @@ static void Run( intf_thread_t *p_intf )
                                    cl->i_mode + 2 );
                 }
 
-                if( i_recv == 0 )
+                if( i_recv <= 0 )
                 {
                     net_Close( cl->fd );
                     TAB_REMOVE( p_intf->p_sys->i_clients ,
